Platform 3.28

* HTTP Server

  - We now disallow TLS renegotiation.

  - We have added HTTPServerModule.enableVirtualThreads(), which enables
    Jetty's support for Java 21 virtual threads.

  - Remote errors, when detected, are now notified to async applications.

Platform 3.27

* Java version support

  - We increased the minimum Java version to 17.

  - We now support Java 21.

* Maven

  We increased the minimum Maven version to 3.6.3

* HTTP and JAX-RS

  We have upgraded to Jetty 12, Jakarta EE 10, and JAX-RS 3.1.0
  from Jetty 11, Jakarta EE 9, and JAX-RS 3.0.0

  INCOMPATIBLE CHANGE: HttpServerModule.withSessionHandler() now binds an
  org.eclipse.jetty.ee10.servlet.SessionHandler.

* Configuration

  In order to support newer versions of Java,
  ConfigAssertions now uses ByteBuddy instead of cglib.

  INCOMPATIBLE CHANGE: ConfigAssertions.assertRecordedDefaults()
  can no longer test config classes that are package private or have
  package private configuration attributes. The configuration classes
  and their configuration getters and setters must be made public.

* Library upgrades

  - Jersey to 3.1.10 (was 3.0.10)
  - jakarta.annotation-api to 2.1.1 (was 2.1.0)
  - jakarta.ws.rs-api to 3.1.0 (was 3.0.0)
  - javassist to 3.30.2-GA (was 3.29.0-GA)
  - jetty to 12.0.16 (was 11.0.4) (CVE-2024-6763)
  - ByteBuddy to 1.15.11 (was 1.12.9)
  - Mockito to 5.15.2 (was 4.5.1)
  - Objenesis to 3.3 (was 3.2)
  - servlet-api to 6.0.0 (was 5.0.0)
  - slf4j to 2.0.16 (was 2.0.9)
  - spotbugs-annotations to 4.9.1 (was 4.7.0)

* Maven plugin upgrades

  - JaCoCo to 0.8.12 (was 0.8.8)
  - spotbugs-maven-plugin to 4.9.1.0 (was 4.8.6.6)

Platform 3.24

* Library Upgrades

  - Base Docker image to c15-java17:3.65 (was 3.57) (CVE-2025-21502)

* Maven plugin upgrades

  - maven-shade-plugin to 3.6.0 (was 3.2.2)
  - spotbugs-maven-plugin to 4.8.6.6 (was 4.7.0.0)

Platform 3.26

* HTTP Server
